css/style.css
/*----------
GOOGLE FONTS
----------*/

@import url(https://fonts.googleapis.com/css?family=Raleway:400,400italic,600,600italic,700,700italic,800,800italic);


/*-----------------------------
GENERAL STYLES & BASE STRUCTURE
-----------------------------*/

body {
  padding-top: 150px; /* Move down content because we have a fixed navbar that is 150px tall */
  font-family: 'Raleway', sans-serif;
  font-size: 16px;
  line-height: 24px;
  color: #666;
  overflow-x: hidden;
}

.body-fix {
  position: fixed;
}

h1 {
  color: #231f20;
  text-transform: uppercase;
  font-weight: 800;
  font-size: 36px;
  margin-bottom: 50px;
  line-height: 62px;
}

h1 span {
  padding-bottom: 6px;
}

h2 {
  color: #231f20;
  font-size: 20px;
  text-transform: uppercase;
  font-weight: 600;
  margin-bottom: 20px;
}

h3 {
  color: #231f20;
  font-size: 22px;
  text-transform: uppercase;
  font-weight: 800;
}

.main p {
  margin-bottom: 40px;
}

.main ul {
  list-style: none;
  padding-left: 0;
  line-height: 22px;
  margin-bottom: 40px;
}

.main ul li {
  padding-bottom: 10px;
}

.main .img-responsive {
  margin-bottom: 20px;
}

.main .well .img-responsive {
  margin-bottom: 0;
}

.thumbnail .img-responsive {
  margin-bottom: 0;
}

.media-left {
  margin-right: 25px;
}

.media-left img {
  max-width: 250px;
  height: auto;
  background-color: #F5F5F5;
  padding: 15px;
  border: 2px solid #EEE;
  border-radius: 4px;
}


/*--------------------------------------------
WEIRDLY STYLED LINKS AT THE BOTTOM OF THE PAGE
--------------------------------------------*/

ul.linklist {
  margin-top: 50px;
}

.linklist li {
  display: block;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-weight: 800;
  font-size: 14px;
  line-height: 50px;
  margin-bottom: 60px;
}

.linklist li a {
  color: #231F20;
  padding: 10px;
  background: #FFF;
	-webkit-transition: all ease 0.5s;
	-moz-transition: all ease 0.5s;
	transition: all ease 0.5s;
}

.out-video{
  background-image: url("./img/MarquetteTech.jpg");
}

/*-----
 NAVBAR
 --- */



.navbar-fixed-top {
  border: 0;
}

.navbar {
  height: 150px;
  background-color: #231f20;
  text-align: right;
}

#navbar {
  margin-top: 48px;
}

.navbar a {
  font-size: 18px;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 3px;
}

.navbar-inverse .navbar-collapse {
  background-color: #231f20;
}

.navbar-inverse .navbar-nav > li > a {
  color: #EEE;
}

.nav > li > a {
  padding-right: 40px;
}

.nav > li:last-child > a {
  padding-right: 0;
}

.navbar-right > li > a {
  font-size: 26px;
  padding-right: 20px;
  padding-top: 10px;
}

.navbar-toggle {
  color: #EEE;
  font-size: 18px;
  letter-spacing: 3px;
  text-transform: uppercase;
  margin-top: 50px;
  margin-right: 25px;
}

.navbar-toggle i {
  font-size: 24px;
}

.navbar-inverse .navbar-toggle {
  border: none;
}

.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
  background-color: transparent;
}

.navbar-brand {
  padding-left: 25px;
}

.logo-mobile {
  width: 104px;
  height: auto;
}

.logo {
  width: 150px;
  height: auto;
}


/* SIDEBAR (NOT the same as navbar. Get it straight!) */

.sidebar {
  top: 120px;
  overflow-y: hidden !important;
  padding:0px !important;
  cursor: pointer;
  min-width:315px;
}

.first{
  margin-top: 50px;
}

.menu-text {
  font-size: 24px;
  font-weight: 600;
  color: #000;
  clear:both;
  padding-top: 10px;
  line-height: 11px;
}

.menu-subtext {
  font-size: 16px;
  font-style: italic;
}

.sidebar-about{
  padding-top: 30px;
}

.big-text{
  position: absolute;
  top: 30%;
  width: 100%;
  background: rgba(0,0,0,0.5);
  color: #fff;
  font-size: 45px;
  font-weight: bold;
  line-height: 45px;
}

.sidebar-about, .sidebar-impact, .sidebar-codefi {
  height: 36%;
  width: 100%;
  left:0px;
  border-bottom: 1px solid #d3d3d3;
  position: absolute;
  top:0;
  transition: all 0.75s ease;
  background-color: #f5f5f5;
  z-index: 100;
}

.sidebar-programs {
  height: 50%;
  width: 100%;
  left:0px;
  border-bottom: 1px solid #d3d3d3;
  position: absolute;
  top:0;
}

.sidebar-connect {
  height: 50%;
  width: 100%;
  left:0px;
  border-bottom: 1px solid #d3d3d3;
  position: absolute;
  bottom:0;
}

.sidebar-about.slideUp{
  top: -36%;
}

.sidebar-spaces, .sidebar-history, .sidebar-marquette {
  height: 32%;
  width: 100%;
  left:0px;
  border-bottom: 1px solid #d3d3d3;
  position: absolute;
  top:36%;
  transition: all 0.75s ease;
  background-color: #f5f5f5;
  z-index: 100;
}

.sidebar-spaces.slideUp{
  top: -36%;
}

.sidebar-spaces.slideDown{
  top: 100%;
}

.sidebar-initiatives, .sidebar-partners, .sidebar-food {
  height: 32%;
  width: 100%;
  left:0px;
  position: absolute;
  top:68%;
  transition: all 0.75s ease;
  background-color: #f5f5f5;
  z-index: 100;
}

.sidebar-initiatives.slideDown{
  top: 136%;
}

.sidebar-about-sub{
  display: none;
  height:100%;
  position:absolute;
  z-index: 10;
  width: 100%;
  top: 0;
  left: 0;
}

.sidebar-spaces-sub{
  display: none;
  height:100%;
  position:absolute;
  z-index: 10;
  width: 100%;
  top: 0;
  left: 0;
}

.sidebar-initiatives-sub{
  display: none;
  height:100%;
  position:absolute;
  z-index: 10;
  width: 100%;
  top: 0;
  left: 0;
}

.collapse-it{
  background-color: #333;
  height:5%;
  display: none;
  position: absolute;
  bottom:0px;
  width: 100%;
  left: 0px;
  z-index:100;
}

.collapse-it h2{
  color:#fff;
  margin-top:5px;
}


/*-----------------------------------------------
ELEMENTS WITH COLORS THAT CHANGE BASED ON BODY ID
-----------------------------------------------*/

#green h1 span {
  border-bottom: 6px solid #72BE49;
}

#green .linklist li a {
  border-top: 6px solid #72BE49;
  box-shadow: inset 0 0 0 0 #72BE49;
}

#green .linklist li a:focus, #green .linklist li a:hover {
  text-decoration: none;
  color: #FFF;
  box-shadow: inset 0 100px 0 0 #72BE49;
}
/* ... */

